<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.jboss</groupId>
        <artifactId>jboss-parent</artifactId>
        <version>51</version>
    </parent>

    <groupId>org.jboss.set</groupId>
    <artifactId>jboss-aphrodite-parent</artifactId>
    <version>0.7.21.Final-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Aphrodite</name>
    <description>An api for retrieving and updating SET issues from multiple issue trackers
    </description>

    <modules>
        <module>bugzilla</module>
        <module>cdicontainer</module>
        <module>common</module>
        <module>container</module>
        <module>domain</module>
        <module>github</module>
        <module>gitlab</module>
        <module>jira</module>
        <module>simplecontainer</module>
        <module>test</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>javax.enterprise</groupId>
                <artifactId>cdi-api</artifactId>
                <version>${version.javax.enterprise.cdi-api}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.weld.se</groupId>
                <artifactId>weld-se</artifactId>
                <version>${version.org.jboss.weld.se}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.set</groupId>
                <artifactId>jboss-aphrodite-bugzilla</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.set</groupId>
                <artifactId>jboss-aphrodite-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.set</groupId>
                <artifactId>jboss-aphrodite-container</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.set</groupId>
                <artifactId>jboss-aphrodite-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.set</groupId>
                <artifactId>jboss-aphrodite-github</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.set</groupId>
                <artifactId>jboss-aphrodite-jira</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.set</groupId>
                <artifactId>jboss-aphrodite-simplecontainer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.set</groupId>
                <artifactId>jboss-aphrodite-test</artifactId>
                <version>${project.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <scm>
        <connection>scm:git:git://github.com/jboss-set/aphrodite.git</connection>
        <developerConnection>scm:git:git@github.com:jboss-set/aphrodite.git</developerConnection>
        <url>https://github.com/jboss-set/aphrodite</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <jdk.min.version>17</jdk.min.version>

        <!-- Dependency versions, please keep alphabetically -->
        <com.squareup.okhttp.okhttp-urlconnection.version>3.14.9</com.squareup.okhttp.okhttp-urlconnection.version>
        <commons.logging.version>1.1.3</commons.logging.version>
        <commons-httpclient.commons-httpclient>3.1</commons-httpclient.commons-httpclient>
        <javax.json.version>1.0.4</javax.json.version>
        <junit.version>4.13.1</junit.version>
        <org.apache.xmlrpc.xmlrpc-client>3.1.3</org.apache.xmlrpc.xmlrpc-client>
        <org.gitlab4j.gitlab4j-api.version>4.14.30</org.gitlab4j.gitlab4j-api.version>
        <org.mockito.version>5.10.0</org.mockito.version>
        <org.kohsuke.github-api.version>1.119</org.kohsuke.github-api.version>
        <org.wildfly.checkstyle-config.version>1.0.8.Final</org.wildfly.checkstyle-config.version>
        <version.javax.enterprise.cdi-api>1.2</version.javax.enterprise.cdi-api>
        <version.javax.ws.rs>2.1.1</version.javax.ws.rs>
        <version.codehaus.jettison>1.5.5</version.codehaus.jettison>
        <version.org.jboss.weld.se>2.3.3.Final</version.org.jboss.weld.se>
    </properties>


    <licenses>
        <license>
            <name>GNU General Lesser Public License (LGPL) version 3.0</name>
            <url>http://www.gnu.org/licenses/lgpl-3.0.html</url>
            <distribution>repo</distribution>
            <comments>Source's header state LGPL but no version, hence v3 is assumed here.
            </comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>egongzle</id>
            <name>Enrique González Martínez</name>
            <organization>IBM</organization>
            <email>enrique.gonzalez.martiezn1@ibm.com</email>
            <timezone>Spain</timezone>
        </developer>
        <developer>
            <id>remerson</id>
            <name>Ryan Emerson</name>
            <organization>Red Hat</organization>
            <email>remerson@redhat.com</email>
            <timezone>United Kingdom</timezone>
        </developer>
        <developer>
            <id>rpelisse</id>
            <name>Romain Pelisse</name>
            <organization>Red Hat</organization>
            <email>belaran@redhat.com</email>
            <timezone>Germany/Berlin</timezone>
        </developer>
    </developers>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <configuration>
                        <configLocation>wildfly-checkstyle/checkstyle.xml</configLocation>
                        <consoleOutput>true</consoleOutput>
                        <failsOnError>true</failsOnError>
                        <linkXRef>false</linkXRef>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>com.puppycrawl.tools</groupId>
                            <artifactId>checkstyle</artifactId>
                            <version>${version.checkstyle}</version>
                            <exclusions>
                                <exclusion>
                                    <groupId>com.sun</groupId>
                                    <artifactId>tools</artifactId>
                                </exclusion>
                            </exclusions>
                        </dependency>
                        <dependency>
                            <groupId>org.wildfly.checkstyle</groupId>
                            <artifactId>wildfly-checkstyle-config</artifactId>
                            <version>${org.wildfly.checkstyle-config.version}</version>
                        </dependency>
                    </dependencies>
                    <executions>
                        <execution>
                            <id>check-style</id>
                            <phase>validate</phase>
                            <goals>
                                <goal>checkstyle</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>
                            --add-opens=java.base/java.lang=ALL-UNNAMED
                            --add-opens=java.base/java.util=ALL-UNNAMED
                        </argLine>
                    </configuration>
                    <executions>
                        <execution>
                            <id>default-test</id>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencies>
        <!-- TODO: isolate? -->
        <dependency>
            <groupId>org.glassfish</groupId>
            <artifactId>javax.json</artifactId>
            <version>${javax.json.version}</version>
        </dependency>
        <!-- TODO: get rid of this one -->
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>${commons.logging.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${org.mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <distributionManagement>
       <repository>
           <id>github</id>
           <name>GitHub Sustaining Engineering Team Apache Maven Packages</name>
           <url>https://maven.pkg.github.com/jboss-set/aphrodite</url>
       </repository>
    </distributionManagement>

    <repositories>
        <repository>
          <id>github</id>
          <url>https://maven.pkg.github.com/jboss-set/aphrodite</url>
          <snapshots>
            <enabled>true</enabled>
          </snapshots>
          <releases>
             <enabled>true</enabled>
          </releases>
        </repository>
         <repository>
           <id>atlassian-public</id>
           <url>https://maven.atlassian.com/maven-external</url>
           <snapshots>
             <enabled>true</enabled>
             <updatePolicy>daily</updatePolicy>
             <checksumPolicy>warn</checksumPolicy>
           </snapshots>
           <releases>
             <enabled>true</enabled>
             <checksumPolicy>warn</checksumPolicy>
           </releases>
         </repository>
    </repositories>

</project>
